tex/version_parsing_success_mirror/parser.output
   0  $accept : %entry% $end

   1  curly_box : O_CURLY boxes C_CURLY

   2  sq_box : O_SQ_BRACKET boxes C_SQ_BRACKET

   3  word : WORD

   4  box : word
   5      | curly_box
   6      | sq_box

   7  boxes :
   8        | boxes box

   9  boxes_start_no_sq :
  10                    | word boxes
  11                    | curly_box boxes

  12  chapter_heading : HEADING_CHAPTER curly_box

  13  section_heading : HEADING_SECTION curly_box

  14  env_b_definition_sq : ENV_B_DEFINITION sq_box

  15  env_b_definition : ENV_B_DEFINITION

  16  env_e_definition : ENV_E_DEFINITION

  17  env_b_example : ENV_B_EXAMPLE sq_box

  18  env_b_example_sq : ENV_B_EXAMPLE sq_box

  19  env_e_example : ENV_E_EXAMPLE

  20  env_b_group : ENV_B_GROUP

  21  env_b_group_sq : ENV_B_GROUP sq_box

  22  env_e_group : ENV_E_GROUP

  23  chapter : chapter_heading blocks sections EOF
  24          | chapter_heading sections EOF

  25  section : section_heading blocks

  26  sections : section
  27           | sections section

  28  blocks : block
  29         | blocks block

  30  block : atom
  31        | group

  32  group : env_b_group atoms env_e_group
  33        | env_b_group_sq atoms env_e_group

  34  atoms :
  35        | atom
  36        | atoms atom

  37  atom : env_b_definition boxes_start_no_sq env_e_definition
  38       | env_b_definition_sq boxes env_e_definition
  39       | env_b_example boxes_start_no_sq env_e_example
  40       | env_b_example_sq boxes env_e_example

  41  %entry% : '\001' chapter

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . chapter  (41)

	HEADING_CHAPTER  shift 3
	.  error

	chapter  goto 4
	chapter_heading  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	chapter_heading : HEADING_CHAPTER . curly_box  (12)

	O_CURLY  shift 6
	.  error

	curly_box  goto 7


state 4
	%entry% : '\001' chapter .  (41)

	.  reduce 41


state 5
	chapter : chapter_heading . blocks sections EOF  (23)
	chapter : chapter_heading . sections EOF  (24)

	HEADING_SECTION  shift 8
	ENV_B_GROUP  shift 9
	ENV_B_DEFINITION  shift 10
	ENV_B_EXAMPLE  shift 11
	.  error

	section_heading  goto 12
	env_b_definition_sq  goto 13
	env_b_definition  goto 14
	env_b_example  goto 15
	env_b_example_sq  goto 16
	env_b_group  goto 17
	env_b_group_sq  goto 18
	blocks  goto 19
	sections  goto 20
	section  goto 21
	block  goto 22
	atom  goto 23
	group  goto 24


state 6
	curly_box : O_CURLY . boxes C_CURLY  (1)
	boxes : .  (7)

	.  reduce 7

	boxes  goto 25


state 7
	chapter_heading : HEADING_CHAPTER curly_box .  (12)

	.  reduce 12


state 8
	section_heading : HEADING_SECTION . curly_box  (13)

	O_CURLY  shift 6
	.  error

	curly_box  goto 26


state 9
	env_b_group : ENV_B_GROUP .  (20)
	env_b_group_sq : ENV_B_GROUP . sq_box  (21)

	O_SQ_BRACKET  shift 27
	ENV_E_GROUP  reduce 20
	ENV_B_DEFINITION  reduce 20
	ENV_B_EXAMPLE  reduce 20

	sq_box  goto 28


state 10
	env_b_definition_sq : ENV_B_DEFINITION . sq_box  (14)
	env_b_definition : ENV_B_DEFINITION .  (15)

	O_SQ_BRACKET  shift 27
	WORD  reduce 15
	O_CURLY  reduce 15
	ENV_E_DEFINITION  reduce 15

	sq_box  goto 29


state 11
	env_b_example : ENV_B_EXAMPLE . sq_box  (17)
	env_b_example_sq : ENV_B_EXAMPLE . sq_box  (18)

	O_SQ_BRACKET  shift 27
	.  error

	sq_box  goto 30


state 12
	section : section_heading . blocks  (25)

	ENV_B_GROUP  shift 9
	ENV_B_DEFINITION  shift 10
	ENV_B_EXAMPLE  shift 11
	.  error

	env_b_definition_sq  goto 13
	env_b_definition  goto 14
	env_b_example  goto 15
	env_b_example_sq  goto 16
	env_b_group  goto 17
	env_b_group_sq  goto 18
	blocks  goto 31
	block  goto 22
	atom  goto 23
	group  goto 24


state 13
	atom : env_b_definition_sq . boxes env_e_definition  (38)
	boxes : .  (7)

	.  reduce 7

	boxes  goto 32


state 14
	atom : env_b_definition . boxes_start_no_sq env_e_definition  (37)
	boxes_start_no_sq : .  (9)

	WORD  shift 33
	O_CURLY  shift 6
	ENV_E_DEFINITION  reduce 9

	curly_box  goto 34
	word  goto 35
	boxes_start_no_sq  goto 36


state 15
	atom : env_b_example . boxes_start_no_sq env_e_example  (39)
	boxes_start_no_sq : .  (9)

	WORD  shift 33
	O_CURLY  shift 6
	ENV_E_EXAMPLE  reduce 9

	curly_box  goto 34
	word  goto 35
	boxes_start_no_sq  goto 37


state 16
	atom : env_b_example_sq . boxes env_e_example  (40)
	boxes : .  (7)

	.  reduce 7

	boxes  goto 38


17: shift/reduce conflict (shift 10, reduce 34) on ENV_B_DEFINITION
17: shift/reduce conflict (shift 11, reduce 34) on ENV_B_EXAMPLE
state 17
	group : env_b_group . atoms env_e_group  (32)
	atoms : .  (34)

	ENV_B_DEFINITION  shift 10
	ENV_B_EXAMPLE  shift 11
	ENV_E_GROUP  reduce 34

	env_b_definition_sq  goto 13
	env_b_definition  goto 14
	env_b_example  goto 15
	env_b_example_sq  goto 16
	atom  goto 39
	atoms  goto 40


18: shift/reduce conflict (shift 10, reduce 34) on ENV_B_DEFINITION
18: shift/reduce conflict (shift 11, reduce 34) on ENV_B_EXAMPLE
state 18
	group : env_b_group_sq . atoms env_e_group  (33)
	atoms : .  (34)

	ENV_B_DEFINITION  shift 10
	ENV_B_EXAMPLE  shift 11
	ENV_E_GROUP  reduce 34

	env_b_definition_sq  goto 13
	env_b_definition  goto 14
	env_b_example  goto 15
	env_b_example_sq  goto 16
	atom  goto 39
	atoms  goto 41


state 19
	chapter : chapter_heading blocks . sections EOF  (23)
	blocks : blocks . block  (29)

	HEADING_SECTION  shift 8
	ENV_B_GROUP  shift 9
	ENV_B_DEFINITION  shift 10
	ENV_B_EXAMPLE  shift 11
	.  error

	section_heading  goto 12
	env_b_definition_sq  goto 13
	env_b_definition  goto 14
	env_b_example  goto 15
	env_b_example_sq  goto 16
	env_b_group  goto 17
	env_b_group_sq  goto 18
	sections  goto 42
	section  goto 21
	block  goto 43
	atom  goto 23
	group  goto 24


state 20
	chapter : chapter_heading sections . EOF  (24)
	sections : sections . section  (27)

	EOF  shift 44
	HEADING_SECTION  shift 8
	.  error

	section_heading  goto 12
	section  goto 45


state 21
	sections : section .  (26)

	.  reduce 26


state 22
	blocks : block .  (28)

	.  reduce 28


state 23
	block : atom .  (30)

	.  reduce 30


state 24
	block : group .  (31)

	.  reduce 31


state 25
	curly_box : O_CURLY boxes . C_CURLY  (1)
	boxes : boxes . box  (8)

	WORD  shift 33
	O_CURLY  shift 6
	C_CURLY  shift 46
	O_SQ_BRACKET  shift 27
	.  error

	curly_box  goto 47
	sq_box  goto 48
	word  goto 49
	box  goto 50


state 26
	section_heading : HEADING_SECTION curly_box .  (13)

	.  reduce 13


state 27
	sq_box : O_SQ_BRACKET . boxes C_SQ_BRACKET  (2)
	boxes : .  (7)

	.  reduce 7

	boxes  goto 51


state 28
	env_b_group_sq : ENV_B_GROUP sq_box .  (21)

	.  reduce 21


state 29
	env_b_definition_sq : ENV_B_DEFINITION sq_box .  (14)

	.  reduce 14


30: reduce/reduce conflict (reduce 17, reduce 18) on WORD
30: reduce/reduce conflict (reduce 17, reduce 18) on O_CURLY
30: reduce/reduce conflict (reduce 17, reduce 18) on ENV_E_EXAMPLE
state 30
	env_b_example : ENV_B_EXAMPLE sq_box .  (17)
	env_b_example_sq : ENV_B_EXAMPLE sq_box .  (18)

	WORD  reduce 17
	O_CURLY  reduce 17
	O_SQ_BRACKET  reduce 18
	ENV_E_EXAMPLE  reduce 17


state 31
	section : section_heading blocks .  (25)
	blocks : blocks . block  (29)

	ENV_B_GROUP  shift 9
	ENV_B_DEFINITION  shift 10
	ENV_B_EXAMPLE  shift 11
	EOF  reduce 25
	HEADING_SECTION  reduce 25

	env_b_definition_sq  goto 13
	env_b_definition  goto 14
	env_b_example  goto 15
	env_b_example_sq  goto 16
	env_b_group  goto 17
	env_b_group_sq  goto 18
	block  goto 43
	atom  goto 23
	group  goto 24


state 32
	boxes : boxes . box  (8)
	atom : env_b_definition_sq boxes . env_e_definition  (38)

	WORD  shift 33
	O_CURLY  shift 6
	O_SQ_BRACKET  shift 27
	ENV_E_DEFINITION  shift 52
	.  error

	curly_box  goto 47
	sq_box  goto 48
	word  goto 49
	box  goto 50
	env_e_definition  goto 53


state 33
	word : WORD .  (3)

	.  reduce 3


state 34
	boxes_start_no_sq : curly_box . boxes  (11)
	boxes : .  (7)

	.  reduce 7

	boxes  goto 54


state 35
	boxes_start_no_sq : word . boxes  (10)
	boxes : .  (7)

	.  reduce 7

	boxes  goto 55


state 36
	atom : env_b_definition boxes_start_no_sq . env_e_definition  (37)

	ENV_E_DEFINITION  shift 52
	.  error

	env_e_definition  goto 56


state 37
	atom : env_b_example boxes_start_no_sq . env_e_example  (39)

	ENV_E_EXAMPLE  shift 57
	.  error

	env_e_example  goto 58


state 38
	boxes : boxes . box  (8)
	atom : env_b_example_sq boxes . env_e_example  (40)

	WORD  shift 33
	O_CURLY  shift 6
	O_SQ_BRACKET  shift 27
	ENV_E_EXAMPLE  shift 57
	.  error

	curly_box  goto 47
	sq_box  goto 48
	word  goto 49
	box  goto 50
	env_e_example  goto 59


state 39
	atoms : atom .  (35)

	.  reduce 35


state 40
	group : env_b_group atoms . env_e_group  (32)
	atoms : atoms . atom  (36)

	ENV_E_GROUP  shift 60
	ENV_B_DEFINITION  shift 10
	ENV_B_EXAMPLE  shift 11
	.  error

	env_b_definition_sq  goto 13
	env_b_definition  goto 14
	env_b_example  goto 15
	env_b_example_sq  goto 16
	env_e_group  goto 61
	atom  goto 62


state 41
	group : env_b_group_sq atoms . env_e_group  (33)
	atoms : atoms . atom  (36)

	ENV_E_GROUP  shift 60
	ENV_B_DEFINITION  shift 10
	ENV_B_EXAMPLE  shift 11
	.  error

	env_b_definition_sq  goto 13
	env_b_definition  goto 14
	env_b_example  goto 15
	env_b_example_sq  goto 16
	env_e_group  goto 63
	atom  goto 62


state 42
	chapter : chapter_heading blocks sections . EOF  (23)
	sections : sections . section  (27)

	EOF  shift 64
	HEADING_SECTION  shift 8
	.  error

	section_heading  goto 12
	section  goto 45


state 43
	blocks : blocks block .  (29)

	.  reduce 29


state 44
	chapter : chapter_heading sections EOF .  (24)

	.  reduce 24


state 45
	sections : sections section .  (27)

	.  reduce 27


state 46
	curly_box : O_CURLY boxes C_CURLY .  (1)

	.  reduce 1


state 47
	box : curly_box .  (5)

	.  reduce 5


state 48
	box : sq_box .  (6)

	.  reduce 6


state 49
	box : word .  (4)

	.  reduce 4


state 50
	boxes : boxes box .  (8)

	.  reduce 8


state 51
	sq_box : O_SQ_BRACKET boxes . C_SQ_BRACKET  (2)
	boxes : boxes . box  (8)

	WORD  shift 33
	O_CURLY  shift 6
	O_SQ_BRACKET  shift 27
	C_SQ_BRACKET  shift 65
	.  error

	curly_box  goto 47
	sq_box  goto 48
	word  goto 49
	box  goto 50


state 52
	env_e_definition : ENV_E_DEFINITION .  (16)

	.  reduce 16


state 53
	atom : env_b_definition_sq boxes env_e_definition .  (38)

	.  reduce 38


state 54
	boxes : boxes . box  (8)
	boxes_start_no_sq : curly_box boxes .  (11)

	WORD  shift 33
	O_CURLY  shift 6
	O_SQ_BRACKET  shift 27
	ENV_E_DEFINITION  reduce 11
	ENV_E_EXAMPLE  reduce 11

	curly_box  goto 47
	sq_box  goto 48
	word  goto 49
	box  goto 50


state 55
	boxes : boxes . box  (8)
	boxes_start_no_sq : word boxes .  (10)

	WORD  shift 33
	O_CURLY  shift 6
	O_SQ_BRACKET  shift 27
	ENV_E_DEFINITION  reduce 10
	ENV_E_EXAMPLE  reduce 10

	curly_box  goto 47
	sq_box  goto 48
	word  goto 49
	box  goto 50


state 56
	atom : env_b_definition boxes_start_no_sq env_e_definition .  (37)

	.  reduce 37


state 57
	env_e_example : ENV_E_EXAMPLE .  (19)

	.  reduce 19


state 58
	atom : env_b_example boxes_start_no_sq env_e_example .  (39)

	.  reduce 39


state 59
	atom : env_b_example_sq boxes env_e_example .  (40)

	.  reduce 40


state 60
	env_e_group : ENV_E_GROUP .  (22)

	.  reduce 22


state 61
	group : env_b_group atoms env_e_group .  (32)

	.  reduce 32


state 62
	atoms : atoms atom .  (36)

	.  reduce 36


state 63
	group : env_b_group_sq atoms env_e_group .  (33)

	.  reduce 33


state 64
	chapter : chapter_heading blocks sections EOF .  (23)

	.  reduce 23


state 65
	sq_box : O_SQ_BRACKET boxes C_SQ_BRACKET .  (2)

	.  reduce 2


State 17 contains 2 shift/reduce conflicts.
State 18 contains 2 shift/reduce conflicts.
State 30 contains 3 reduce/reduce conflicts.


25 terminals, 27 nonterminals
42 grammar rules, 66 states
